# dotlist

./: .gitignore  Cargo.toml  README.md  README_en.md  build.rs  build_test.bat  dotlist.node  llms-full.md  llms.md  package-lock.json  package.json
bindings/c/: example.c  list_lang_ffi.h
bindings/cpp/: list_lang.hpp  list_lang_ffi.hpp
bindings/go/: dotlist.go  example_test.go  go.mod  list_lang.go  list_lang_ffi.h
bindings/nodejs/: example.js  list_lang.js
bindings/python/: complete_tutorial.py  demo_new_features.py  example.py  friendly_list.py  install.bat  install.ps1  install_simple.bat  quick_start.py  requirements.txt  test_bindings.py
python_bindings/: list_lang-0.1.0-cp38-cp38-win_amd64.whl
src/: c_ffi.rs  cli.rs  ide.rs  lib.rs  main.rs  nodejs_bindings.rs  parser.rs  python_bindings.rs  rust_api.rs
