[package]
name = "list"
version = "0.1.0"
edition = "2021"
description = ".list"

[lib]
name = "dotlist"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "list"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"

# Binary serialization and compression
flate2 = { version = "1.0", features = ["zlib"], optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
cbindgen = "0.26"

# Python bindings (PyO3)
[dependencies.pyo3]
version = "0.23"
features = ["extension-module", "abi3-py38"]
optional = true

# Node.js bindings (napi-rs)
[dependencies.napi]
version = "2"
features = ["napi6"]
optional = true
[dependencies.napi-derive]
version = "2"
optional = true

[features]
default = []
python = ["pyo3"]
nodejs = ["napi", "napi-derive"]
binary = ["flate2", "bincode", "serde"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
